<resources>
    <string name="app_name">Psymw6MobilePokerApp</string>
    <!-- Strings related to login -->
    <string name="pickLogin">Choose a login method</string>
    <string name="loggingIn">Logging in...</string>
    <string name="attemptUserRetrieval">Attempting to retrieve user data...</string>
    <string name="loginFailed">Login Failed\nTry again</string>
    <string name="loginComplete">Login Completed\nTap to start</string>
    <string name="createUser">Create Username</string>
    <string name="chooseUsername">Choose a username</string>
    <string name="server_client_id">992597545265-dd7gbt39dp4i9iakn1ts1541vc0qebn9.apps.googleusercontent.com</string>
    <string name="loginStreakDisplay">You have logged in for %1$d days and received %2$d additional currency as a login bonus!\nRemember to log in every day for a bigger bonus!</string>

    <!-- Strings for buttons -->
    <string name="guestLoginButton">Login as Guest</string>
    <string name="optionsButton">Options</string>
    <string name="playButton">Play</string>
    <string name="profileButton">Profile</string>
    <string name="helpButton">Help</string>
    <string name="friendsButton">Friends</string>

    <!-- String descriptions for buttons accessibility -->
    <string name="guestLoginButtonDescription">Login as Guest</string>
    <string name="createUserButtonDescription">Confirm username</string>
    <string name="optionsButtonDescription">Options</string>
    <string name="playButtonDescription">Play</string>
    <string name="profileButtonDescription">Profile</string>
    <string name="helpButtonDescription">Help</string>
    <string name="friendsButtonDescription">Friends</string>

    <!-- Strings for shared preferences -->
    <string name="settingsPreferences">com.game.poker.psymw6mobilepokerapp.mySettingsPreferences</string>
    <string name="dataPreferences">com.game.poker.psymw6mobilepokerapp.myDataStats</string>
    <string name="loginPreferences">com.game.poker.psymw6mobilepokerapp.myLoginPreferences</string>

    <!-- Keys for settings preferences -->

    <!-- Keys for data preferences -->
    <string name="username">username</string>
    <string name="last_login">last_login</string>
    <string name="currency">currency</string>
    <string name="login_streak">login_streak</string>
    <string name="login_streak_changed">login_streak_changed</string>
    <string name="hands_played">hands_played</string>
    <string name="hands_won">hands_won</string>
    <string name="win_rate">win_rate</string>
    <string name="max_winnings">max_winnings</string>
    <string name="max_chips">max_chips</string>

    <!-- Keys for login preferences -->
    <string name="isLoggedIn">isLoggedIn</string>
    <string name="accountType">accountType</string>
    <string name="existingUUID">isUUID</string>
    <string name="currentUUID">myUUID</string>
    <string name="linkedAccount">isAccountLinked</string>

    <!-- Strings for in game buttons -->
    <string name="callButton">Call</string>
    <string name="foldButton">Fold</string>
    <string name="betButton">Bet</string>
    <string name="checkButton">Check</string>
    <string name="raiseButton">Raise</string>
    <string name="leaveButton">Exit Game</string>

    <!-- Strings for in game views -->
    <string name="betSliderDescription">Slider to choose amount to bet or raise</string>
    <string name="betAmountDescription">The amount to bet or raise by</string>

    <!-- String descriptions for in game buttons accessibility -->
    <string name="callButtonDescription">Call bet</string>
    <string name="foldButtonDescription">Fold hand</string>
    <string name="betButtonDescription">Place first bet</string>
    <string name="checkButtonDescription">Check bet</string>
    <string name="raiseButtonDescription">Raise bet</string>
    <string name="leaveButtonDescription">Leave current game</string>

    <!-- Strings for in game image view descriptions -->
    <string name="cardDescription">Card: %1$s of %2$s</string>
    <string name="playerDescription">Player %1$d has %2$d chips and currently bets %3$d</string>
    <string name="playerAwayDescription">Player %1$d is away</string>

    <!-- String for broadcasting player moves -->
    <string name="broadcastMove">Player %1$s %2$ss </string>

    <!-- Strings for player displays -->
    <string name="playerName"></string>
    <string name="playerCurrency"></string>
    <string name="playerBet"></string>

    <!-- Strings for winners -->
    <plurals name="winOrWinners">
        <item quantity="one">%1$s wins %2$d with hand %3$s</item>
        <item quantity="other">%1$s win %2$d with hand %3$s</item>
    </plurals>

    <!-- String for pot -->
    <string name="potString">Pot: %1$d</string>

    <!-- String for time remaining in turn -->
    <string name="turnTimeRemaining">Time left: %1$d</string>
    <string name="notYourTurn">Waiting for turn</string>

    <!-- Strings for profile display -->
    <string name="profileNameDisplay">%1$s\'s Profile</string>
    <string name="profileLastLogin">Last logged in: %1$s</string>
    <string name="profileLoginStreak">Current Login Streak: %1$d</string>
    <string name="profileCurrency">Current chips: %1$d</string>
    <string name="profileHandsPlayed">Hands Played: %1$d</string>
    <string name="profileHandsWon">Hands won: %1$d</string>
    <string name="profileWinRate">Win rate: %1$d%%</string>
    <string name="profileMaxWinnings">Max chips won in 1 hand: %1$d</string>
    <string name="profileMaxChips">Max chips earned: %1$d</string>
    <string name="profileBackButton">Back</string>
    <string name="profileSignOutButton">Sign out of Google Account</string>
    <string name="profileLinkButton">Link Guest account to a Google Account</string>
    <string name="linkSuccessful">Successfully linked Google Account</string>
    <string name="linkUnsuccessful">Linking Google Account failed</string>

    <!-- Strings for profile descriptions -->
    <string name="profileSignOutDescription">Sign out of your google account</string>
    <string name="profileLinkDescription">Links a google account to guest account</string>
    <string name="profileBackDescription">Go back to previous menu</string>
</resources>
