<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".PokerAppShared.game.fragments.Call_Button">

    <Button
        android:id="@+id/foldButtonCa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/foldButtonDescription"
        android:minWidth="100dp"
        android:minHeight="48dp"
        android:text="@string/foldButton"
        android:textSize="45sp" />

    <Button
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/callButtonDescription"
        android:minWidth="100dp"
        android:minHeight="48dp"
        android:text="@string/callButton"
        android:textSize="45sp" />

    <Button
        android:id="@+id/raiseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/raiseButtonDescription"
        android:minWidth="100dp"
        android:minHeight="48dp"
        android:text="@string/raiseButton"
        android:textSize="45sp" />
</LinearLayout>