<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PokerAppShared.MainMenu">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@color/mainMenuButtonColour"
            android:contentDescription="@string/playButtonDescription"
            android:text="@string/playButton"
            android:textSize="45sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="6dp" />

        <Button
            android:id="@+id/helpButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@color/mainMenuButtonColour"
            android:contentDescription="@string/helpButtonDescription"
            android:text="@string/helpButton"
            android:textSize="45sp"
            tools:layout_editor_absoluteX="355dp"
            tools:layout_editor_absoluteY="6dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/optionsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/profileButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@color/mainMenuButtonColour"
            android:contentDescription="@string/profileButtonDescription"
            android:text="@string/profileButton"
            android:textSize="45sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="159dp" />

        <Button
            android:id="@+id/friendsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@color/mainMenuButtonColour"
            android:contentDescription="@string/friendsButtonDescription"
            android:text="@string/friendsButton"
            android:textSize="45sp"
            tools:layout_editor_absoluteX="355dp"
            tools:layout_editor_absoluteY="159dp" />
    </LinearLayout>

    <Button
        android:id="@+id/optionsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:background="@color/mainMenuButtonColour"
        android:contentDescription="@string/optionsButtonDescription"
        android:text="@string/optionsButton"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/btn_default" />
</android.support.constraint.ConstraintLayout>